@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2012,v 1.1912 2012/06/07 21:37:36 ryoon Exp $
+$NetBSD: CHANGES-2012,v 1.1914 2012/06/08 21:52:33 pettai Exp $
 
 Changes to the packages collection and infrastructure in 2012:
 
@@ -2908,3 +2908,5 @@ Changes to the packages collection and infrastructure in 2012:
 	Added emulators/qemu0 version 0.15.1nb5 [ryoon 2012-06-07]
 	Updated mail/thunderbird10 to 10.0.5 [ryoon 2012-06-08]
 	Updated mail/thunderbird10-l10n to 10.0.5 [ryoon 2012-06-08]
+	Updated net/unbound to 1.4.17 [pettai 2012-06-08]
+	Updated security/validns to 0.5 [pettai 2012-06-08]
